Fix logo badge alignment

--- a/style/core/layout.styl
+++ b/style/core/layout.styl
@@ -55,6 +55,8 @@ header
 
         span
             text-transform uppercase
+            position relative
+            top -2px
 
             &:before
                 content '\2022'
@@ -129,6 +131,7 @@ header
                 left 50%
                 transform translateX(-50%)
                 z-index 9
+                top auto
 
                 &:before, &:after
                     content ''
